[package]
name = "castorix"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0"
description = "A comprehensive Rust library for interacting with Farcaster protocol"
repository = "https://github.com/RyanKung/castorix"
homepage = "https://github.com/RyanKung/castorix"
documentation = "https://docs.rs/castorix"
readme = "README.md"
keywords = ["farcaster", "ethereum", "blockchain", "social", "protocol"]
categories = ["web-programming", "network-programming", "cryptography"]
authors = ["Your Name <your.email@example.com>"]

# Exclude development-only files from the published package
exclude = [
    "contracts/**/*",
    "generated_abis/**/*", 
    "target/**/*",
    ".github/**/*",
    "tests/**/*",
    "*.json",
    "*.bin",
    "test_data/**/*",
    "test_*_data/**/*",
    "scripts/**/*",
    "RELEASE.md",
    "RULES.md",
    "CONTRIBUTING.md",
    "devlog.md",
    "fyi.md",
    "logo.png",
    "proof_*.json",
    "labels/**/*",
]

# Library configuration
[lib]
name = "castorix"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "castorix"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
ed25519-dalek = {version = "2.0.0", features = ["rand_core"]}
rand = "0.8.5"
hex = "0.4.3"
protobuf = "2.25.2"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "abigen"] }
bip32 = "0.5"
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
aes-gcm = "0.10.3"
argon2 = "0.5.2"
rpassword = "7.3.1"
base64 = "0.21.5"
dirs = "5.0.1"
tempfile = "3.8.1"
shellexpand = "3.0.0"
sha2 = "0.10.8"
tiny-keccak = "2.0"
bs58 = "0.5.0"
bip39 = "2.0"
lazy_static = "1.4.0"
image = "0.24"
viuer = "0.6"
# MCP (Model Context Protocol) dependencies
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
# REST API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
ethers = { version = "2.0", features = ["rustls", "abigen", "ws", "dev-rpc"] }

[build-dependencies]
protobuf-codegen-pure = "2.25.2"
ethers = { version = "2.0", features = ["abigen"] }

# Test configuration
[profile.test]
# Enable debug info for tests
debug = true
# Optimize tests for faster execution
opt-level = 0

